[gd_scene load_steps=5 format=3 uid="uid://c3b8p6hdar22c"]

[ext_resource type="Texture2D" uid="uid://fjs2apb8xuls" path="res://Assets/Images/ObstacleRace/Isla 1.png" id="1"]
[ext_resource type="Script" uid="uid://ddou75h00ivyt" path="res://Scenes/Entity/Islands/Island1/Island.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://dp7o0f7swlalw" path="res://Assets/Sounds/SFX/ender_punch.wav" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(231, 302)

[node name="Island" type="Area2D"]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11.5, 3)
shape = SubResource("1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-108.76, -172.5)
scale = Vector2(0.504, 1.95)
rect = Rect2(-60, -10, 500, 200)

[node name="PunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_Island_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
